# cookiecutter-python-package-template

./: README.rst  cookiecutter.json
{{cookiecutter.package_name_hyphenated}}/: README.rst  pyproject.toml
{{cookiecutter.package_name_hyphenated}}/docs/: api.rst  conf.py  index.rst
{{cookiecutter.package_name_hyphenated}}/src/{{cookiecutter.package_name_underscored}}/: __init__.py  cli.py  {{cookiecutter.package_name_underscored}}.py
{{cookiecutter.package_name_hyphenated}}/tests/: __init__.py  test_{{cookiecutter.package_name_underscored}}.py
